--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,5 +13,5 @@
 </head>
 <body>
   <app-root></app-root>
-</body>
+<script type="text/javascript" src="pdb-gateway/inline.bundle.js"></script><script type="text/javascript" src="pdb-gateway/polyfills.bundle.js"></script><script type="text/javascript" src="pdb-gateway/styles.bundle.js"></script><script type="text/javascript" src="pdb-gateway/vendor.bundle.js"></script><script type="text/javascript" src="pdb-gateway/main.bundle.js"></script></body>
 </html>
